--- a/app/frontend-app/movie-rater-web/public/index.html
+++ b/app/frontend-app/movie-rater-web/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     
-    <script src="https://kit.fontawesome.com/ab292ac551.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <meta
       name="description"
       content="Web site created using create-react-app"
